cmake_minimum_required(VERSION 3.9)
project(Cvast)

set(CMAKE_CXX_STANDARD 11)

add_executable(Cvast
        cvast/rapidxml/rapidxml.hpp
        cvast/rapidxml/rapidxml_print.hpp
        cvast/datatypes/holder.hpp
        cvast/datatypes/genericNode.hpp
        cvast/datatypes/dataTypes.hpp
        cvast/datatypes/vastBase.hpp
        cvast/datatypes/errorsHandler.hpp
        cvast/datatypes/vast4/datastruct/vastAdTagUri.hpp
        cvast/datatypes/vast4/datastruct/altText.hpp
        cvast/datatypes/vast4/datastruct/companion.hpp
        cvast/datatypes/vast4/datastruct/nonLinear.hpp
        cvast/datatypes/vast4/datastruct/tracking.hpp
        cvast/datatypes/vast4/datastruct/trackingEvents.hpp
        cvast/datatypes/vast4/datastruct/verification.hpp
        cvast/datatypes/vast4/datastruct/iconClicks.hpp
        cvast/datatypes/vast4/datastruct/iconViewTracking.hpp
        cvast/datatypes/vast4/datastruct/icon.hpp
        cvast/datatypes/vast4/datastruct/resource.hpp
        cvast/datatypes/vast4/datastruct/icons.hpp
        cvast/datatypes/vast4/datastruct/videoClicks.hpp
        cvast/datatypes/vast4/datastruct/mezzanine.hpp
        cvast/datatypes/vast4/datastruct/interactiveCreativeFile.hpp
        cvast/datatypes/vast4/datastruct/mediaFiles.hpp
        cvast/datatypes/vast4/datastruct/adParameters.hpp
        cvast/datatypes/vast4/datastruct/companionAds.hpp
        cvast/datatypes/vast4/datastruct/nonLinearAds.hpp
        cvast/datatypes/vast4/datastruct/creativeExtensions.hpp
        cvast/datatypes/vast4/datastruct/universalAdId.hpp
        cvast/datatypes/vast4/datastruct/creative.hpp
        cvast/datatypes/vast4/datastruct/creatives.hpp
        cvast/datatypes/vast4/datastruct/extensions.hpp
        cvast/datatypes/vast4/datastruct/adVerifications.hpp
        cvast/datatypes/vast4/datastruct/viewableImpression.hpp
        cvast/datatypes/vast4/datastruct/survey.hpp
        cvast/datatypes/vast4/datastruct/pricing.hpp
        cvast/datatypes/vast4/datastruct/advertiser.hpp
        cvast/datatypes/vast4/datastruct/description.hpp
        cvast/datatypes/vast4/datastruct/category.hpp
        cvast/datatypes/vast4/datastruct/impression.hpp
        cvast/datatypes/vast4/datastruct/adTitle.hpp
        cvast/datatypes/vast4/datastruct/adSystem.hpp
        cvast/datatypes/vast4/datastruct/wrapper.hpp
        cvast/datatypes/vast4/datastruct/inLine.hpp
        cvast/datatypes/vast4/datastruct/ad.hpp
        cvast/datatypes/vast4/datastruct/error.hpp
        cvast/datatypes/vast4/datastruct/vast.hpp
        cvast/datatypes/vast4/nodeTypes.hpp
        cvast/datatypes/vast4/datastruct/linear.hpp
        cvast/datatypes/vast4/datastruct/duration.hpp
        cvast/utils/vastUtils.hpp
        cvast/parser.hpp
        cvast/cvast_v4.hpp
        main.cpp)