cmake_minimum_required(VERSION 3.9)
project(Cvast)

set(CMAKE_CXX_STANDARD 11)

add_executable(Cvast
        cvast/rapidxml/rapidxml.hpp
        cvast/rapidxml/rapidxml_print.hpp
        cvast/datatypes/holder.hpp
        cvast/datatypes/genericNode.hpp
        cvast/datatypes/nodeWrapper.hpp
        cvast/datatypes/dataTypes.hpp
        cvast/datatypes/vastBase.hpp
        cvast/datatypes/errorsHandler.hpp
        cvast/datatypes/vast/datastruct/vastAdTagUri.hpp
        cvast/datatypes/vast/datastruct/altText.hpp
        cvast/datatypes/vast/datastruct/companion.hpp
        cvast/datatypes/vast/datastruct/nonLinear.hpp
        cvast/datatypes/vast/datastruct/tracking.hpp
        cvast/datatypes/vast/datastruct/trackingEvents.hpp
        cvast/datatypes/vast/datastruct/verification.hpp
        cvast/datatypes/vast/datastruct/iconClicks.hpp
        cvast/datatypes/vast/datastruct/iconViewTracking.hpp
        cvast/datatypes/vast/datastruct/icon.hpp
        cvast/datatypes/vast/datastruct/resource.hpp
        cvast/datatypes/vast/datastruct/icons.hpp
        cvast/datatypes/vast/datastruct/videoClicks.hpp
        cvast/datatypes/vast/datastruct/mezzanine.hpp
        cvast/datatypes/vast/datastruct/interactiveCreativeFile.hpp
        cvast/datatypes/vast/datastruct/mediaFiles.hpp
        cvast/datatypes/vast/datastruct/adParameters.hpp
        cvast/datatypes/vast/datastruct/companionAds.hpp
        cvast/datatypes/vast/datastruct/nonLinearAds.hpp
        cvast/datatypes/vast/datastruct/creativeExtensions.hpp
        cvast/datatypes/vast/datastruct/universalAdId.hpp
        cvast/datatypes/vast/datastruct/creative.hpp
        cvast/datatypes/vast/datastruct/creatives.hpp
        cvast/datatypes/vast/datastruct/extensions.hpp
        cvast/datatypes/vast/datastruct/adVerifications.hpp
        cvast/datatypes/vast/datastruct/viewableImpression.hpp
        cvast/datatypes/vast/datastruct/survey.hpp
        cvast/datatypes/vast/datastruct/pricing.hpp
        cvast/datatypes/vast/datastruct/advertiser.hpp
        cvast/datatypes/vast/datastruct/description.hpp
        cvast/datatypes/vast/datastruct/category.hpp
        cvast/datatypes/vast/datastruct/impression.hpp
        cvast/datatypes/vast/datastruct/adTitle.hpp
        cvast/datatypes/vast/datastruct/adSystem.hpp
        cvast/datatypes/vast/datastruct/wrapper.hpp
        cvast/datatypes/vast/datastruct/inLine.hpp
        cvast/datatypes/vast/datastruct/ad.hpp
        cvast/datatypes/vast/datastruct/error.hpp
        cvast/datatypes/vast/datastruct/vast.hpp
        cvast/datatypes/vast/datastruct/linear.hpp
        cvast/datatypes/vast/datastruct/duration.hpp
        cvast/utils/vastUtils.hpp
        cvast/parser.hpp
        cvast/api.hpp
        cvast/cvast.hpp
        example.cpp)

add_executable(Test
        tests/vast4/requirements.h
        tests/vast4/requirements.cpp
        tests/vast4/values.h
        tests/vast4/values.cpp
        tests/vast4/validate.h
        tests/vast4/tests.h
        tests/vast4/tests.cpp
        tests/vast4/main.cpp)